objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Alt_Phone__c</fullName>
        <label>Alt Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Company_Name_of_Lead__c</fullName>
        <inlineHelpText>Populate if different from Primary Company Name</inlineHelpText>
        <label>Company Name of Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Report</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Consumer_Products_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Consumer Products</label>
        <queue>Consumer_Products</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Food_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Food</label>
        <queue>Food</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Health_Sciences_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Health Sciences</label>
        <queue>Health_Sciences</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MSR_Sustainability_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>ISR &amp; Sustainability</label>
        <queue>ISR_Sustainability</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>Region_1_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Region 1</label>
        <queue>Region_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>Water_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Water</label>
        <queue>Water</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Lead_Qualification</fullName>
        <active>true</active>
        <description>Lead can be changed to the Qualified status unless the Lead Source, Lead Source Detail, Lead Name, Company and Address have been identified for the Lead.</description>
        <errorConditionFormula>AND(
  ISPICKVAL(Status,&quot;Qualified&quot;),
  ISBLANK(Lead_Source_Detail__c),
  ISBLANK(Company),
  ISBLANK(Email),
  ISBLANK(Address)
)</errorConditionFormula>
        <errorMessage>A Lead cannot be Qualified unless the Lead Source, Lead Source Detail, Lead Name, Company and Address have been identified for the Lead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Source_Pardot</fullName>
        <active>true</active>
        <description>Lead Source field is set to read-only if the Lead is coming from Pardot and Lead Source is set to the value &quot;Pardot&quot;.</description>
        <errorConditionFormula>AND(ISCHANGED(LeadSource),ISPICKVAL(PRIORVALUE(LeadSource),&quot;Pardot&quot;))</errorConditionFormula>
        <errorDisplayField>LeadSource</errorDisplayField>
        <errorMessage>Lead Source cannot be changed if Lead originated from Pardot and was created by Pardot in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>